--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Generador de Stats Cuqui</title>
+  <link rel="icon" href="ico.ico" type="image/x-icon">
+  <title> Dragonas Y Perronas </title>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
