--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
   </head>
   <body>
   
-    <h1>Generador de Stats Cuqui</h1>
     <button id="generateButton">GENERAR STATS</button>
   
     <div class="result-container" style="display: none;" id="resultsContainer">
+    <h1>Generador de Stats</h1>
       <div class="set" id="set1">
         <div class="set-title">Set 1</div>
       </div>
