--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         color: red;
         font-weight: bold;
       }
+
+      #dnp{
+        width:100%;
+      }
       /* Responsive para pantallas pequeñas */
       @media screen and (max-width: 768px) {
         .set {
@@ -80,7 +84,9 @@
     </style>
   </head>
   <body>
-  
+    
+    <img id="dnp" src="DnP.gif" alt="Descripción del GIF" style="max-width: 100%; height: auto;">
+
     <button id="generateButton">GENERAR STATS</button>
   
     <div class="result-container" style="display: none;" id="resultsContainer">
