--- a/index.html
+++ b/index.html
@@ -4,182 +4,180 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="ico.ico" type="image/x-icon">
-  <title> Dragonas Y Perronas </title>
-    <style>
-      body {
-        font-family: 'Poppins', sans-serif;
-        text-align: center;
-        background-color: #f0f8ff;
-        color: #333;
-        margin: 0;
-        padding: 20px;
+  <title>Dragonas Y Perronas</title>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      background-color: #f0f8ff;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      font-size: 2.5em;
+      color: #ff69b4;
+      margin: 20px 0;
+    }
+    button {
+      padding: 12px 25px;
+      font-size: 18px;
+      background-color: #ffb6c1;
+      border: 2px solid #ff69b4;
+      border-radius: 25px;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      display: block; /* Para centrar el botón */
+      margin: 0 auto; /* Centrando el botón */
+    }
+    button:hover {
+      background-color: #ff69b4;
+    }
+    .result-container {
+      display: flex;
+      justify-content: center; /* Centrar los sets */
+      margin-top: 30px;
+      flex-wrap: wrap;
+    }
+    .set {
+      background-color: #fff;
+      border-radius: 15px;
+      padding: 20px;
+      width: 45%;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      margin: 10px;
+    }
+    .set-title {
+      font-size: 24px;
+      margin-bottom: 15px;
+      color: #ff69b4;
+    }
+    .stat-line {
+      font-size: 18px;
+      margin: 10px 0;
+    }
+    .dice-roll {
+      display: inline-block;
+      margin-right: 10px;
+      font-weight: bold;
+      padding: 8px;
+      border-radius: 50%;
+      background-color: #ffe4e1;
+      color: #333;
+    }
+    .low-roll {
+      color: red;
+      font-weight: bold;
+    }
+    /* Responsive para pantallas pequeñas */
+    @media screen and (max-width: 768px) {
+      .set {
+        width: 100%;
       }
       h1 {
-        font-size: 2.5em;
-        color: #ff69b4;
-        margin-bottom: 20px;
+        font-size: 2em;
       }
-      button {
-        padding: 12px 25px;
-        font-size: 18px;
-        background-color: #ffb6c1;
-        border: 2px solid #ff69b4;
-        border-radius: 25px;
-        color: white;
-        cursor: pointer;
-        transition: background-color 0.3s;
-      }
-      button:hover {
-        background-color: #ff69b4;
-      }
-      .result-container {
-        display: flex;
-        justify-content: space-around;
-        margin-top: 30px;
-        flex-wrap: wrap;
-      }
-      .set {
-        background-color: #fff;
-        border-radius: 15px;
-        padding: 20px;
-        width: 45%;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        margin: 10px;
-      }
-      .set-title {
-        font-size: 24px;
-        margin-bottom: 15px;
-        color: #ff69b4;
-      }
-      .stat-line {
-        font-size: 18px;
-        margin: 10px 0;
-      }
-      .dice-roll {
-        display: inline-block;
-        margin-right: 10px;
-        font-weight: bold;
-        padding: 8px;
-        border-radius: 50%;
-        background-color: #ffe4e1;
-        color: #333;
-      }
-      .low-roll {
-        color: red;
-        font-weight: bold;
-      }
+    }
+  </style>
+</head>
+<body>
 
-      #dnp{
-        width:100%;
-      }
-      /* Responsive para pantallas pequeñas */
-      @media screen and (max-width: 768px) {
-        .set {
-          width: 100%;
-        }
-        h1 {
-          font-size: 2em;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    
-    <img id="dnp" src="DnP.gif" alt="Descripción del GIF" style="max-width: 100%; height: auto;">
+  <img id="dnp" src="DnP.gif" alt="Descripción del GIF" style="max-width: 100%; height: auto;">
 
-    <button id="generateButton">GENERAR STATS</button>
+  <h1>Generador de Stats</h1> <!-- Encabezado en su propia línea -->
+
+  <button id="generateButton">GENERAR STATS</button>
   
-    <div class="result-container" style="display: none;" id="resultsContainer">
-        <h1>Generador de Stats</h1>
-        <div class="set" id="set1">
-            <div class="set-title">Set 1</div>
-        </div>
-        <div class="set" id="set2">
-            <div class="set-title">Set 2</div>
-        </div>
+  <div class="result-container" style="display: none;" id="resultsContainer">
+    <div class="set" id="set1">
+      <div class="set-title">Set 1</div>
     </div>
+    <div class="set" id="set2">
+      <div class="set-title">Set 2</div>
+    </div>
+  </div>
   
-    <script>
-      document.getElementById('generateButton').addEventListener('click', function() {
-        const resultsContainer = document.getElementById('resultsContainer');
-        const button = document.getElementById('generateButton');
+  <script>
+    document.getElementById('generateButton').addEventListener('click', function() {
+      const resultsContainer = document.getElementById('resultsContainer');
+      const button = document.getElementById('generateButton');
   
-        if (resultsContainer.style.display === 'none') {
-          // Generar dados
-          function rollStats() {
-            const rolls = [];
-            for (let i = 0; i < 6; i++) {
-              const diceRolls = [];
-              for (let j = 0; j < 4; j++) {
-                diceRolls.push(Math.floor(Math.random() * 6) + 1);
-              }
-              diceRolls.sort((a, b) => a - b);
-              const lowestRoll = diceRolls[0];
-              const sumOfTopThree = diceRolls[1] + diceRolls[2] + diceRolls[3];
-              rolls.push({ dice: diceRolls, sum: sumOfTopThree, lowest: lowestRoll });
+      if (resultsContainer.style.display === 'none') {
+        // Generar dados
+        function rollStats() {
+          const rolls = [];
+          for (let i = 0; i < 6; i++) {
+            const diceRolls = [];
+            for (let j = 0; j < 4; j++) {
+              diceRolls.push(Math.floor(Math.random() * 6) + 1);
             }
-            return rolls;
+            diceRolls.sort((a, b) => a - b);
+            const lowestRoll = diceRolls[0];
+            const sumOfTopThree = diceRolls[1] + diceRolls[2] + diceRolls[3];
+            rolls.push({ dice: diceRolls, sum: sumOfTopThree, lowest: lowestRoll });
           }
-  
-          const set1 = rollStats();
-          const set2 = rollStats();
-  
-          const set1Container = document.getElementById('set1');
-          const set2Container = document.getElementById('set2');
-  
-          set1Container.innerHTML = '<div class="set-title">Set 1</div>';
-          set2Container.innerHTML = '<div class="set-title">Set 2</div>';
-  
-          set1.forEach(stat => {
-            const statLine = document.createElement('div');
-            statLine.className = 'stat-line';
-            let lowRollHighlighted = false;
-            stat.dice.forEach(dice => {
-              const diceElement = document.createElement('span');
-              diceElement.className = 'dice-roll';
-              diceElement.textContent = dice;
-              if (dice === stat.lowest && !lowRollHighlighted) {
-                diceElement.classList.add('low-roll');
-                lowRollHighlighted = true;
-              }
-              statLine.appendChild(diceElement);
-            });
-            const sumElement = document.createElement('span');
-            sumElement.textContent = ` = ${stat.sum}`;
-            statLine.appendChild(sumElement);
-            set1Container.appendChild(statLine);
-          });
-  
-          set2.forEach(stat => {
-            const statLine = document.createElement('div');
-            statLine.className = 'stat-line';
-            let lowRollHighlighted = false;
-            stat.dice.forEach(dice => {
-              const diceElement = document.createElement('span');
-              diceElement.className = 'dice-roll';
-              diceElement.textContent = dice;
-              if (dice === stat.lowest && !lowRollHighlighted) {
-                diceElement.classList.add('low-roll');
-                lowRollHighlighted = true;
-              }
-              statLine.appendChild(diceElement);
-            });
-            const sumElement = document.createElement('span');
-            sumElement.textContent = ` = ${stat.sum}`;
-            statLine.appendChild(sumElement);
-            set2Container.appendChild(statLine);
-          });
-  
-          resultsContainer.style.display = 'flex';
-          button.textContent = 'CANCELAR DADOS';
-        } else {
-          // Ocultar resultados y restaurar el botón
-          resultsContainer.style.display = 'none';
-          button.textContent = 'GENERAR STATS';
+          return rolls;
         }
-      });
-    </script>
   
-  </body>
-  </html>
+        const set1 = rollStats();
+        const set2 = rollStats();
   
+        const set1Container = document.getElementById('set1');
+        const set2Container = document.getElementById('set2');
+  
+        set1Container.innerHTML = '<div class="set-title">Set 1</div>';
+        set2Container.innerHTML = '<div class="set-title">Set 2</div>';
+  
+        set1.forEach(stat => {
+          const statLine = document.createElement('div');
+          statLine.className = 'stat-line';
+          let lowRollHighlighted = false;
+          stat.dice.forEach(dice => {
+            const diceElement = document.createElement('span');
+            diceElement.className = 'dice-roll';
+            diceElement.textContent = dice;
+            if (dice === stat.lowest && !lowRollHighlighted) {
+              diceElement.classList.add('low-roll');
+              lowRollHighlighted = true;
+            }
+            statLine.appendChild(diceElement);
+          });
+          const sumElement = document.createElement('span');
+          sumElement.textContent = ` = ${stat.sum}`;
+          statLine.appendChild(sumElement);
+          set1Container.appendChild(statLine);
+        });
+  
+        set2.forEach(stat => {
+          const statLine = document.createElement('div');
+          statLine.className = 'stat-line';
+          let lowRollHighlighted = false;
+          stat.dice.forEach(dice => {
+            const diceElement = document.createElement('span');
+            diceElement.className = 'dice-roll';
+            diceElement.textContent = dice;
+            if (dice === stat.lowest && !lowRollHighlighted) {
+              diceElement.classList.add('low-roll');
+              lowRollHighlighted = true;
+            }
+            statLine.appendChild(diceElement);
+          });
+          const sumElement = document.createElement('span');
+          sumElement.textContent = ` = ${stat.sum}`;
+          statLine.appendChild(sumElement);
+          set2Container.appendChild(statLine);
+        });
+  
+        resultsContainer.style.display = 'flex';
+        button.textContent = 'CANCELAR DADOS';
+      } else {
+        // Ocultar resultados y restaurar el botón
+        resultsContainer.style.display = 'none';
+        button.textContent = 'GENERAR STATS';
+      }
+    });
+  </script>
+
+</body>
+</html>
