--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
       color: white;
       cursor: pointer;
       transition: background-color 0.3s;
-      display: block; /* Para centrar el botón */
-      margin: 0 auto; /* Centrando el botón */
+      display: block; 
+      margin: 0 auto; 
     }
     button:hover {
       background-color: #ff69b4;
     }
     .result-container {
       display: flex;
-      justify-content: center; /* Centrar los sets */
+      justify-content: center; 
       margin-top: 30px;
       flex-wrap: wrap;
     }
@@ -70,7 +70,8 @@
       color: red;
       font-weight: bold;
     }
-    /* Responsive para pantallas pequeñas */
+
+
     @media screen and (max-width: 768px) {
       .set {
         width: 100%;
@@ -85,7 +86,7 @@
 
   <img id="dnp" src="DnP.gif" alt="Descripción del GIF" style="max-width: 100%; height: auto;">
 
-  <h1>Generador de Stats</h1> <!-- Encabezado en su propia línea -->
+  <h1>Generador de Stats</h1> 
 
   <button id="generateButton">GENERAR STATS</button>
   
