--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </div>
 
   <div class="links-container">
-    <a href="https://docs.google.com/document/d/1amakRRCoQZRiCYnIYT99JBnrja_tY1GNIBNdu3tHcFU/edit?usp=sharing" class="link-btn">FICHA</a>
+    <a href="https://drive.google.com/drive/folders/1V2qbZ64exw2-Llqaie0aJDQ_n9LmJl8F?usp=sharing" class="link-btn">FICHA</a>
     <a href="https://docs.google.com/document/d/1Dlcji8oR8gjisp-Uua9jirKSnK_iLwy97cX9NxeJq94/edit?usp=sharing" class="link-btn">RAZAS</a>
     <a href="https://docs.google.com/document/u/0/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit" class="link-btn">CLASES</a>
     <a href="https://docs.google.com/document/d/1d3crS_GMVS5TDmTpqnTaOYPt7tNXUt4iTDLVI3n2s0g/edit?usp=sharing" class="link-btn">ARMAS</a>
