--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="stats.html" class="menu-btn">GENERADOR DE STATS</a>
       <a href="https://www.docdroid.net/1auqYzE/dd-5a-edicion-hoja-o-ficha-editable-pdf" class="menu-btn">FICHA</a>
       <a href="https://docs.google.com/document/d/1Dlcji8oR8gjisp-Uua9jirKSnK_iLwy97cX9NxeJq94/edit?usp=sharing" class="menu-btn">RAZAS</a>
-      <a href="https://docs.google.com/document/u/0/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit" class="menu-btn">CLASES</a>
+      <a href="clases.html" class="menu-btn">CLASES</a>
       <a href="https://docs.google.com/document/d/1d3crS_GMVS5TDmTpqnTaOYPt7tNXUt4iTDLVI3n2s0g/edit?usp=sharing" class="menu-btn">ARMAS</a>
       <a href="https://docs.google.com/document/d/1amakRRCoQZRiCYnIYT99JBnrja_tY1GNIBNdu3tHcFU/edit?usp=sharing" class="menu-btn">RUNAS</a>
       <a href="https://docs.google.com/document/d/1AMj_ZXyBYFPHXMJBCPIUntG5cOepWFOA0cCoEsT6SNs/edit?usp=sharing" class="menu-btn">REGLAS</a>
