--- a/clases.html
+++ b/clases.html
@@ -15,12 +15,27 @@
     <a href="index.html" class="logo-link">
       <img id="dnp" src="media/DnP.gif" alt="Descripción del GIF" class="logo">
     </a>
+    <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing" class="menu-btn"> DOCUMENT </a>
 
     <div class="menu-container">
-      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing" class="menu-btn"> DOCUMENT </a>
-      <a href="clases/guerrero.html">
-        <img src="media/guerrero.png" alt="Guerrero" class="guerrero-btn">
-    </a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Artífice" class="classe-btn">        </a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Bárbaro " class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Bardo" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Brujo" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Clerigo" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Druida" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Explorador" class="classe-btn"></a>
+
+      <a href="clases/guerrero.html"> <img src="media/guerrero.png" alt="Guerrero" class="classe-btn"></a>
+
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Hechicero" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Mago" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/monje.png" alt="Monje" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Ocultista" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Paladin" class="classe-btn"></a>
+      <a href="https://docs.google.com/document/d/1mbq8Mv45ZaRNtPgDBH7BGb3B661Y-dpw_tD237Pb7-M/edit?usp=sharing"> <img src="media/Caedrel.png" alt="Pícaro" class="classe-btn"></a>
+
+ 
 
     
  
