--- a/clases/guerrero.html
+++ b/clases/guerrero.html
@@ -530,8 +530,10 @@
             </div>
         </div>
         
+    </div>
 
     <script>
+        
         // Función para filtrar las aptitudes según el nivel seleccionado
         document.getElementById('nivel-selector').addEventListener('change', function() {
             const nivelSeleccionado = parseInt(this.value);
